<resources>
    <!--    ESTRUCTURA PARA STRING-ARRAY
    <string-array name="Pregunta_Redes_sociales">
        <item>@string/Facebook</item>
        <item>@string/Twitter</item>
    </string-array>
    -->

    <!--INICIA STRINGS FORMULARIO GENERAL 1-->
    <string name="Verificado">VERIFICADO</string>
    <string name="Ingresa">INGRESAR</string>
    <string name="Registro">REGISTRO</string>
    <string name="Registro_Usuario">Registro de usuarios</string>
    <string name="Intruccion_Registro_Datos">Bienvenido, por favor ingresa tus datos en los siguientes campos:</string>
    <string name="Datos_Personales">Datos personales</string>
    <string name="Apellido_Paterno">Apellido paterno:</string>
    <string name="Apellido_Materno">Apellido materno:</string>
    <string name="Nombre">Nombre(s):</string>
    <string name="Edad">Edad</string>
    <string name="Ocupacion">Ocupación</string>
    <string name="Sexo">Sexo</string>
    <string name="Femenino">Femenino</string>
    <string name="Masculino">Masculino</string>
    <string name="Nacionalidad">Nacionalidad</string>
    <string name="CURP_ID">CURP/ID</string>
    <string name="Anexar_Foto_Identificacion">Por favor anexa una imagen de tu identificación</string>
    <string name="Calle">Calle</string>
    <string name="Numero_Exterior">Número exterior</string>
    <string name="Numero_Interiror">Número interior</string>
    <string name="Colonia">Colonia</string>
    <string name="Codigo_Postal">Código postal</string>
    <string name="Delegacion">Delegación</string>
    <string name="Estado">Estado</string>
    <string name="Anexar_Imagen_Comprobante_Domicilio">Por favor anexa una imagen de tu comprobante de domicilio</string>
    <string name="Telefono_Local">Teléfono local</string>
    <string name="Celular">Celular</string>

    <string name="Persona_Referencia">Persona de referencia</string>
    <string name="Telefono">Teléfono</string>

    <string name="Actividades">Actividades</string>
    <string name="Instruccion_Selecciona_Actividad">Selecciona uno de los siguientes campos, de acuerdo a la actividad que realizas</string>

    <string name="Siguiente">Siguiente</string>
    <string name="VistaPrevia">Mostrar vista previa</string>
    <!--Termina STRINGS FORMULARIO GENERAL 1-->

    <!--INICIA STRINGS FORMULARIO GENERAL 2-->
    <string name="app_name">App E</string>
    <string name="Datos_de_contacto">Datos de contacto:</string>
    <string name="Direccion_web">Dirección web:</string>
    <string name="Telefonos">Teléfonos:</string>
    <string name="Correo_electronico">Correo electrónico:</string>

    <string name="Pregunta_Redes_Sociales">¿Qué redes sociales manejas?</string>
    <string name="Facebook">Facebook:</string>
    <string name="Twitter">Twitter:</string>
    <string name="Instagram">Instagram:</string>
    <string name="Snapchat">Snapchat:</string>

    <string name="Pregunta_Intitucion_Cubrir">¿Qué institución te gustaría cubrir?</string>
    <string name="Proteccion_Civil">Protección Civil</string>
    <string name="Sismológico_Nacional">Sismológico nacional</string>
    <string name="Meteorologico_Nacional">Meteorológico Nacional</string>
    <string name="Cruz_Roja">Cruz Roja</string>
    <string name="Gobierno_Local">Gobierno Local</string>
    <string name="Gobierno_Federal">Gobierno Federal</string>
    <string name="Policia_Federal">Policia Federal</string>
    <string name="Bombero">Bomberos</string>
    <string name="SEDENA">SEDENA</string>
    <string name="SEP">SEP</string>
    <string name="UNAM">UNAM</string>
    <string name="IPN">IPN</string>
    <string name="UAM">UAM</string>

    <string name="Pregunta_Experiencia">¿Con qué experiencia de este tipo cuentas?</string>
    <string name="Pregunta_Certificados">¿Qué certificados tienes?</string>
    <string name="Descripcion_documento">Agrega una breve descripción y archivo visual del documento</string>

    <string name="Pregunta_Transporte">¿Con cuántos elementos de transporte cuenta tu brigada?</string>
    <string name="Automovil">Automóvil</string>
    <string name="Motocicleta">Motocicleta</string>
    <string name="Bicicleta">Bicicleta</string>
    <string name="Camion">Camión</string>
    <string name="Camioneta">Camioneta</string>
    <string name="Van">Van</string>

    <string name="Pregunta_Actividades_Brigadadistas">¿Qué actividades realiza tu brigada?</string>
    <string name="Recoger_Escombros_Brigadistas">Recoger escombros</string>
    <string name="Acordonar_Brigadistas">Acordonar el área</string>
    <string name="Revision_Estructuras_Brigadistas">Revisión de Estructuras</string>
    <string name="Revision_Red_Electrica_Brigadistas">Revisión de la Red eléctrica</string>
    <string name="Carpinteria_Brigadistas">Carpintería</string>
    <string name="Sustancias_Quimicas_Brigadistas">Manejo de sustancias químicas peligrosas</string>
    <string name="Construcción_Brigadistas">Construcción</string>
    <string name="Primeros_Auxilios_Brigadistas">Primeros auxilios</string>
    <string name="Otros_Brigadistas">Otros(+)</string>
    <string name="Nombre_Miembros_Brigadistas">Nombre de los miembros que dispone</string>
    <string name="Ingresar_Nombre_Brigadistas">Favor de ingresar nombre por nombre</string>
    <string name="Anexar_Imagen_Brigadistas">Favor de anexar imagenes que prueben tu actividad</string>
    <string name="Zonas_Trabajar_Brigadistas">Zonas en las que puedes trabajar</string>
    <string name="Zona1">     Zona 1</string>
    <string name="Zona2">     Zona 2</string>
    <string name="Zona3">     Zona 3</string>

    <string name="Pregunta_zona">¿En qué zona te encuentras?</string>
    <string name="Direccion_lugar_afectado">Dirección del lugar afectado</string>
    <string name="Lugar1">Lugar 1</string>
    <string name="Lugar2">Lugar 2</string>
    <string name="Lugar3">Lugar 3</string>
    <string name="Agregar_lugar">Agregar lugar (+)</string>
    <string name="Agregar_lugar_submenu">Agregar lugar</string>

    <string name="Comunicados">Comunicados:</string>
    <string name="Titulo">Título:</string>
    <string name="Hora">Hora:</string>
    <string name="Imagen">Imagen:</string>
    <string name="Descripcion">Descripción:</string>
    <string name="Liga">Liga:</string>
    <string name="Web">Web</string>


    <string name="Iniciar_sesion">Iniciar sesión</string>
    <string name="Usuario">Usuario: </string>
    <string name="Contraseña">Contraseña: </string>
    <string name="Administrador_centro_acopio">Administrador de centro de acopio       </string>
    <string name="Descripcion_Administrador_centro_acopio">"\nEste tipo de usuario es el encargado de estar presente en un centro de acopio. Tiene la tarea de reportar las necesidades del lugar en tiempo real, tanto de bienes materiales como de recursos humanos. Debe ser un usuario que esté familiarizado con el trabajo en el centro de acopio.\n"</string>
    <string name="Direccion_Lugar">Dirección del lugar</string>
    <string name="Descripcion_Lugar">Descripción del lugar</string>
    <string name="Capacidad">Capacidad</string>

    <string name="Residentes_aceptan">Residentes que se aceptan</string>
    <string name="Mixto">Mixto</string>
    <string name="Hombres">Hombre</string>
    <string name="Mujeres">Mujeres</string>
    <string name="Niños">Niños</string>
    <string name="Mascotas">Mascotas</string>
    <string name="Fotos_lugar">Fotos del lugar</string>

    <string name="Pregunta_Actividades_Realizas_Albergue">¿Qué actividades realizas en el albergue?</string>
    <string name="Descripcion_Actividades">Agrega una breve descripción de las actividades que realizas en el lugar </string>
    <string name="Foto_Actividades">Por favor, agrega una foto relacionada a las actividades que realizas</string>

    <string name="Pregunta_Equipo">¿Con qué equipo cuentas?</string>
    <string name="Botas">Botas con casquillo</string>
    <string name="Chaleco">Chaleco</string>
    <string name="Casco">Casco</string>
    <string name="Guantes">Guantes de carnaza</string>
    <string name="Cubrebocas">Cubrebocas</string>
    <string name="Lentes">Lentes de protección</string>
    <string name="Otros">Otros (+)</string>

    <string name="Dias">Días disponibles</string>
    <string name="Lunes">Lunes</string>
    <string name="Martes">Martes</string>
    <string name="Miercoles">Miércoles</string>
    <string name="Jueves">Jueves</string>>
    <string name="Viernes">Viernes</string>
    <string name="Sabado">Sábado</string>
    <string name="Domingo">Domingo</string>

    <string name="Horario">Horarios disponibles</string>
    <string name="Dos_a_seis">02:00-06:00</string>
    <string name="Seis_a_diez">06:00-10:00</string>
    <string name="Diez_a_catorce">10:00-14:00</string>
    <string name="Catorce_a_dieciocho">14:00-18:00</string>
    <string name="Dieciocho_a_veintidos">18:00-22:00</string>
    <string name="Veintidos_a_dos">22:00-02:00</string>

    <string name="Enviar_registro">ENVIAR REGISTRO</string>

    <!--Termina STRINGS FORMULARIO GENERAL 2-->









</resources>
