<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.adrian.appe.Salbergue">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--TÍTULO ADMINISTRADOR DE ALBERGUE-->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Administrador_albergue"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_weight="5"/>
                <!--BOTÓN REGRESAR-->
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/btn_Regresar"
                    android:background="@android:drawable/ic_menu_revert"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:textAlignment="center"
                    android:textStyle="bold" />

            </LinearLayout>
            <!--Descripción de funciones administrador de albergue-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Descripcion_administrador_albergue"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="italic" />

            <!--SECCIÓN BÚSQUEDA POR ZONAS-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pregunta_zona"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>
            <!--Zona 1-->
            <CheckBox
                android:id="@+id/chk_Zona1_Albergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Zona1"
                android:textColor="@android:color/black" />
            <!--Zona 2-->
            <CheckBox
                android:id="@+id/chk_Zona2_Albergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Zona2"
                android:textColor="@android:color/black" />
            <!--Zona 3-->
            <CheckBox
                android:id="@+id/chk_Zona3_Albergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Zona3"
                android:textColor="@android:color/black" />

            <!--SECCIÓN LUGAR DEL ALBERGUE -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Direccion_albergue"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>
            <!--Lugar 1-->
            <CheckBox
                android:id="@+id/chk_Lugar1_Albergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lugar1"
                android:textColor="@android:color/black" />
            <!--Lugar 2-->
            <CheckBox
                android:id="@+id/chk_Lugar2_Albergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lugar2"
                android:textColor="@android:color/black" />
            <!--Lugar 3-->
            <CheckBox
                android:id="@+id/chk_Lugar3_Albergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lugar3"
                android:textColor="@android:color/black" />
            <!--Agregar lugar-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Agregar_lugar"
                android:id="@+id/txt_Lugar_Albergue"/>

            <!--Agregar lugar (submenú)-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Agregar_lugar_submenu"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
            <!--Dirección albergue-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Direccion_albergue"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="normal" />
            <EditText
                android:id="@+id/chk_DireccionAlbergue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--Descripción albergue-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Descripcion_albergue"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="normal" />
            <EditText
                android:id="@+id/chk_DescripcionAlbergue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            
            <!--Capacidad-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Capacidad_albergue"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="normal" />
            <EditText
                android:id="@+id/chk_CapacidadAlbergue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <!--Tipo de residentes que se aceptan-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Residentes_aceptan"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>
            <!--Mixto-->
            <CheckBox
                android:id="@+id/chk_ResidentesMixtoAlbergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mixto"
                android:textColor="@android:color/black" />
            <!--Hombre-->
            <CheckBox
                android:id="@+id/chk_ResidentesHombresAlbergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Hombres"
                android:textColor="@android:color/black" />
            <!--Mujeres-->
            <CheckBox
                android:id="@+id/chk_ResidentesMujeresAlbergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mujeres"
                android:textColor="@android:color/black" />
            <!--Niños-->
            <CheckBox
                android:id="@+id/chk_ResidentesNinosAlbergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Niños"
                android:textColor="@android:color/black" />
            <!--Mascotas-->
            <CheckBox
                android:id="@+id/chk_ResidentesMascotasAlbergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mascotas"
                android:textColor="@android:color/black" />
            <!--Fotos del albergue-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Fotos_albergues"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="normal" />
            <!--Archivo de imagen-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Archivo_imagen"/>
            <!--PREGUNTA SOBRE ACTIVIDADES EN EL ALBERGUE-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pregunta_actividades_albergue"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>
            <!--Descripción actividades en el albergue-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Descripcion_actividades"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="normal"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_actividades_Albergue"/>
            <!--Agregar una imágen-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Archivo_imagen"/>

            <!--SECCIÓN DÍAS-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dias_disponibles"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
            <!--Lunes-->
            <CheckBox
                android:id="@+id/chk_LunesAlbergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lunes"
                android:textColor="@android:color/black" />
            <!--Martes-->
            <CheckBox
                android:id="@+id/chk_MartesAlbergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Martes"
                android:textColor="@android:color/black" />
            <!--Miércoles-->
            <CheckBox
                android:id="@+id/chk_MiercolesAlbergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Miercoles"
                android:textColor="@android:color/black" />
            <!--Jueves-->
            <CheckBox
                android:id="@+id/chk_JuevesAlbergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Jueves"
                android:textColor="@android:color/black" />
            <!--Viernes-->
            <CheckBox
                android:id="@+id/chk_ViernesAlbergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Viernes"
                android:textColor="@android:color/black" />
            <!--Sábado-->
            <CheckBox
                android:id="@+id/chk_SabadoAlbergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sabado"
                android:textColor="@android:color/black" />
            <!--Domingo-->
            <CheckBox
                android:id="@+id/chk_DomingoAlbergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Domingo"
                android:textColor="@android:color/black" />

            <!--SECCIÓN HORARIOS-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Horario"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
            <!--02a06-->
            <CheckBox
                android:id="@+id/chk_0206Albergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dos_a_seis"
                android:textColor="@android:color/black" />
            <!--06a10-->
            <CheckBox
                android:id="@+id/chk_0610Albergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Seis_a_diez"
                android:textColor="@android:color/black" />
            <!--10a14-->
            <CheckBox
                android:id="@+id/chk_1014Albergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Diez_a_catorce"
                android:textColor="@android:color/black" />
            <!--14a18-->
            <CheckBox
                android:id="@+id/chk_1418Albergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Catorce_a_dieciocho"
                android:textColor="@android:color/black" />
            <!--18a22-->
            <CheckBox
                android:id="@+id/chk_1822Albergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dieciocho_a_veintidos"
                android:textColor="@android:color/black" />
            <!--22a02-->
            <CheckBox
                android:id="@+id/chk_2202Albergue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Veintidos_a_dos"
                android:textColor="@android:color/black" />
            <!--BOTÓN ENVIAR REGISTRO-->
            <Button
                android:id="@+id/btn_EnviarRegistroAlbergue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/Enviar_registro"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
